# tasksApp

./: .gitignore
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/tasks/: TaskDataSourceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/tasks/: MainActivity.kt  TasksApplication.kt
app/src/main/java/com/example/tasks/data/: Task.kt
app/src/main/java/com/example/tasks/data/db/: TaskDataSource.kt  TaskDbHelper.kt
app/src/main/java/com/example/tasks/data/network/: WebDavClient.kt
app/src/main/java/com/example/tasks/data/preferences/: SettingsRepository.kt  SyncMetadataRepository.kt
app/src/main/java/com/example/tasks/data/repositories/: LogRepository.kt  TaskRepository.kt
app/src/main/java/com/example/tasks/data/serialization/: TaskSerializer.kt
app/src/main/java/com/example/tasks/data/services/: TaskImportExportService.kt  TaskImportService.kt  WebDavClient.kt
app/src/main/java/com/example/tasks/data/sync/: SyncOrchestrator.kt  SyncScheduler.kt
app/src/main/java/com/example/tasks/ui/navigation/: AppNavigation.kt
app/src/main/java/com/example/tasks/ui/screens/: DebugLogScreen.kt  (+4 more)
app/src/main/java/com/example/tasks/utils/: AppLog.kt  NetworkUtils.kt
app/src/main/java/com/example/tasks/workers/: SyncWorker.kt
app/src/main/res/drawable/: autorenew.xml  copy_all.xml  drag_handle.xml  drag_indicator.xml  keep.xml  list.xml  redo.xml  sync.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: shortcuts.xml
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/src/: lib.rs
(+6 files in other folders)
